log/build_2021-06-01_12-26-07/wasp_mini_controller/stderr.log
  File "/home/wasp_mini/ros2_ws/install/wasp_mini_controller/lib/python3.8/site-packages/wasp_mini_controller/main.py", line 97
    def euler_from_quaternion([quaternion_x, quaternion_y, quaternion_z, quaternion_w]):
                              ^
SyntaxError: invalid syntax

